Fixed text transition color issue on mobile nav Reference : https://app.frontify.com/screen/932959 (Comment 3 & 4) Fixed padding issue on mobile nav
Updates:

[Siamak] Optimized color transition on Mobile

[Siamak] Moved  function bgAnimate90  inside header footer processor function

--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -165,7 +165,7 @@ i.nav-arrow:before {
 		padding-right: 0;
 		a {
 			display: block;
-			padding: 10px 0 9px 20px;
+			padding: 10px 0 9px 15px;
 			text-decoration: none;
 			color: $top-link;
 			&:hover {
@@ -297,12 +297,6 @@ i.nav-arrow:before {
 		}
 		&.tier3 {
 			padding: 0 0 0 15px;
-
-			> li {
-				a {
-					padding-left: 15px;
-				}
-			}
 		}
 		&.tier4 {
 			padding: 0 0 0 15px;
